# statology

./: CHANGELOG.md  LICENSE  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_publish.yml
statology/: __init__.py  average.py  normalize.py  outliers.py
